test/integration/good/fun-return-typ2.stan
functions {
  real foo() { if(1) reject(""); reject("");}
}