test/integration/bad/functions-bad32.stan
functions {
  real gen(real f) {
    return 1;
  }
}

generated quantities {
  real gen;
  gen = gen(1);
}
